# biomedica-index

./: CHANGELOG.md  LICENSE  README.md  local_article_demo.py  pkg_demo.py  pyproject.toml
assets/: README.md
examples/: local_article_demo.py  local_figure_demo.py
examples/rag/: __init__.py  rag_env.yml  rag_with_index.py
examples/rag/llms/: querychainllms.py  queryllms.py
examples/rag/utils/: __init__.py  citation_tools.py  json_writers.py  prompts.py  split_text.py
src/biomedica_index/: __init__.py  clients.py  index.py
src/biomedica_index/utils/: consts.py  embed_utils.py
